debhelper (10.9.2) UNRELEASED; urgency=medium

  [ Niels Thykier ]
  * dh_install: Defer the removal of --list-missing and
    --fail-missing until compat 12.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * qmake.pm: Remove unnecessary "-nocache" parameter.
    (Closes: #878427, LP: #1206234)

 -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000

debhelper (10.9.1) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_builddeb: Add some missing error checks.
  * Dh_Lib.pm: Fix bug where debhelper could discard some error
    messages during parsing when -O options were passed via
    DH_OPTIONS (among other).  Thanks to Adrian Bunk and
    Andrew Shadura for reporting the issue.  (Closes: #876689)
  * Dh_Getopt.pm: Gracefully reduce the tool to a no-op when given
    a -p<pkg> and <pkg> is disabled by a Build-Profile.
  * debhelper.7: Document how package selections interact with
    Build-Profiles.  Thanks to Helmut Grohne for the report.
    (Closes: #872745)
  * dh_installdocs: Validate that the package passed to
    --doc-main-package are listed in debian/control.
  * dh_installexamples: Ditto.
  * dh_systemd_start: Regex escape two paths used in a regex.
  * Dh_Lib: Open compat 12.
  * dh_clean: Defer making -k an error until compat 12.
  * Dh_Getopt: Defer making -s an error until compat 12.
  * dh_installinit: Defer making --no-restart-on-upgrade an error
    until compat 12.
  * Dh_Lib: Defer making the "shell-spawning bug" in doit an error
    until compat 12.
  * dh_systemd_enable: Fix regression in debhelper/10.9 where
    template units would be installed as regular units (and
    possibly replace regular units).  (Closes: #877989)
  * dh_systemd_enable: Drop versioned dependency on
    init-system-helpers that is satisfied in oldstable.
  * Dh_Lib: Fix regression where --no-act would actually create
    maintscript snippets.
  * dh_systemd_*: If an unit file cannot be read (e.g. to check for