@@ -114,7 +114,7 @@ on_pkgs_in_parallel {
 			my $component = '';
 			if ($section =~ m{^(.*)/[^/]+$}) {
 				$component = "${1}/";
-				# This should not happen, but lets not propogate the error
+				# This should not happen, but lets not propagate the error
 				# if does.
 				$component = '' if $component eq 'main/';
 			}
