@@ -20,7 +20,7 @@ are run, so the important stuff is clearly visible.
 
 An exception to above rule are dh_auto_* commands and dh itself. They will
 also print the commands interacting with the upstream build system and which
-of the simple debhelper programms are called. (i.e. print what a traditional
+of the simple debhelper programs are called. (i.e. print what a traditional
 non-dh(1) using debian/rules would print but nothing else).
 
 Debhelper programs should accept all options listed in the "SHARED
@@ -324,7 +324,7 @@ restore_file_on_clean($file)
 	CAVEAT: This *cannot* undo arbitrary "rm -fr"'ing.  The dir,
 	which is/was in $file, must be present when dh_clean is called.
 make_symlink($src, $dest, $tmp)
-	Creates a Policy compliant sytem link called $dest pointing to
+	Creates a Policy compliant system link called $dest pointing to
 	$src. If $tmp is given, then $tmp will be prefixed to $dest when
 	creating the actual symlink.
 install_dh_config_file($src, $dest[, $mode])
