@@ -8,6 +8,9 @@ debhelper (10.9.2) UNRELEASED; urgency=medium
   * qmake.pm: Remove unnecessary "-nocache" parameter.
     (Closes: #878427, LP: #1206234)
 
+  [ Ville Skyttä ]
+  * Fix a number of spelling mistakes.  (Closes: #878325)
+
  -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000
 
 debhelper (10.9.1) unstable; urgency=medium
